--- a/app/functions/package.json
+++ b/app/functions/package.json
@@ -12,7 +12,7 @@
   "engines": {
     "node": "24"
   },
-  "main": "lib/index.js",
+  "main": "lib/functions/src/index.js",
   "dependencies": {
     "firebase-admin": "^13.6.0",
     "firebase-functions": "^7.0.0"
