--- a/deployment/package.json
+++ b/deployment/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "type": "module",
   "dependencies": {
+    "dotenv": "^17.3.1",
     "solc": "^0.8.34",
     "viem": "^2.46.3"
   }
