--- a/app/functions/package.json
+++ b/app/functions/package.json
@@ -15,7 +15,8 @@
   "main": "lib/functions/src/index.js",
   "dependencies": {
     "firebase-admin": "^13.6.0",
-    "firebase-functions": "^7.0.0"
+    "firebase-functions": "^7.0.0",
+    "viem": "^2.46.3"
   },
   "devDependencies": {
     "typescript": "^5.7.3",
